k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: concatly-api-service
  labels:
    app: concatly-api
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: concatly-api
